horizontal scroll fix

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,9 +1,4 @@
 /* General body styling */
-body, html {
-    height: 100%;
-    overflow-x: hidden; /* Prevent horizontal scroll */
-}
-
 body {
     font-family: 'Arial', sans-serif;
     background-color: #055c1b; /* Deep green background */
@@ -43,9 +38,9 @@ main {
     text-align: center;
     width: 100%;
     max-width: 900px;
+    overflow-y: auto;
     height: 100%;
     padding-bottom: 50px; /* Prevent the content from touching the bottom */
-    overflow-y: auto;
 }
 
 /* Glossary and check-in specific styling */
@@ -193,6 +188,17 @@ button.disabled:hover::after {
 
 .about-container {
     margin-top: 150px; /* Ensure the about section is below the login form */
+}
+
+body, html {
+    height: 100%; /* Ensure the page takes up full height */
+    overflow-x: hidden; /* Prevent horizontal scroll */
+}
+
+main {
+    overflow-y: auto;
+    height: 100%;
+    padding-bottom: 50px; /* Prevent the content from touching the bottom */
 }
 
 /* Adjustments for smaller screens */
